# organizational-ai-adaptation-observatory

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_KERNEL.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.toml
configs/datasources/: earnings_calls.toml  jobs.toml  patents.toml  products.toml  sec.toml
configs/pipeline/: panel_builder.toml
data/: README.md
data/reference/: sp500_pilot_100.csv
data/universe/: firm_universe.csv
data/validation/: attention_labeling.csv  attention_labeling_sample.csv  attention_labels.csv  attention_scores.csv
docs/: architecture.md  contributing.md  data_pipeline.md  entity_resolution.md
docs/validation/: attention_classifier_validation.md
examples/: build_panel_demo.py  entity_resolution_demo.py
schemas/features/: attention_firm_year.json  deployment_firm_year.json  investment_firm_year.json
scripts/: build_firm_universe.py  rebuild_sec_manifest.py  run_all_pipelines.py
src/oaa_observatory/: __init__.py  __main__.py  cli.py
src/oaa_observatory/config/: __init__.py  loader.py  models.py  settings.py
src/oaa_observatory/earnings_calls/: __init__.py  pipeline.py
src/oaa_observatory/entity_resolution/: __init__.py  resolver.py
src/oaa_observatory/feature_engineering/: __init__.py  aggregations.py
src/oaa_observatory/financial_controls/: __init__.py  compustat_import.py
src/oaa_observatory/ingestion/: __init__.py  base.py
src/oaa_observatory/jobs/: __init__.py  pipeline.py
src/oaa_observatory/nlp/: __init__.py  keyword_counter.py
src/oaa_observatory/panel_builder/: __init__.py  builder.py
src/oaa_observatory/patents/: __init__.py  pipeline.py
src/oaa_observatory/preprocessing/: __init__.py  text.py
src/oaa_observatory/products/: __init__.py  pipeline.py
src/oaa_observatory/quality_checks/: __init__.py  panel_checks.py
src/oaa_observatory/schemas/: __init__.py  records.py
src/oaa_observatory/sec/: __init__.py  bootstrap.py  client.py  parser.py  pipeline.py
src/oaa_observatory/utils/: __init__.py  duckdb.py  io.py  logging.py
src/oaa_observatory/validation/: __init__.py  attention_sample.py  metrics.py
src/oaa_observatory/wrds/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_compustat_import.py  test_config.py  test_entity_resolution.py  test_nlp.py  test_panel_builder.py  test_sec_pipeline.py  test_validation.py
