[project]
name = "oaa-observatory"
version = "0.1.0"
description = "Longitudinal firm-level AI adaptation signal infrastructure from public and commercial sources"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Organizational AI Adaptation Observatory Contributors" },
]
keywords = [
    "organizational-ai",
    "empirical-research",
    "firm-panel",
    "entity-resolution",
    "research-infrastructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.1.0",
    "loguru>=0.7.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "typer>=0.12.0",
]

[project.optional-dependencies]
wrds = ["wrds>=3.2.0"]
nlp = ["spacy>=3.7.0"]
dev = [
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
oaa = "oaa_observatory.cli:app"

[project.urls]
Homepage = "https://github.com/organizational-ai-adaptation/organizational-ai-adaptation-observatory"
Documentation = "https://github.com/organizational-ai-adaptation/organizational-ai-adaptation-observatory#readme"
Repository = "https://github.com/organizational-ai-adaptation/organizational-ai-adaptation-observatory"
Issues = "https://github.com/organizational-ai-adaptation/organizational-ai-adaptation-observatory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oaa_observatory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests requiring external data or credentials",
    "slow: slow-running tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "ARG", "PTH",
    "RUF", "D",
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "TC001", # type-checking block imports (incompatible with runtime usage)
    "TC002",
    "TC003",
    "UP042", # StrEnum - keep str, Enum for broader compatibility
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103", "D102", "ARG001", "TC003"]
"scripts/**/*.py" = ["D103"]
"src/oaa_observatory/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
packages = ["oaa_observatory"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["duckdb.*", "wrds.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["oaa_observatory"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
